style.css
.top,.footer {
    background-color: #1F2937;
}

h1 {
    color: #f9faf8;
    font-size: 48px;
    font-weight: bolder;
}

ul {
    list-style: none;
    margin: 0%;
    padding: 0%;
}

a, .webinfo > p{
    font-size: 18px;
    color: #cbcdd1;
}

a {
    text-decoration: none;
}

.nav > h3 {
    font-size: 24px;
    color: #f9faf8;
}

.footer > p {
    color: #e5e7eb;
}

button, .action {
    background-color: #3992f6;
    color: #f9faf8;
}

.mid1 > h2 {
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937;
}

.mid1 > p{
    color: #747578;
    font-size: 18px;
}

.mid2 {
    background-color:#e5e7eb;
}

.mid2 > h2 {
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
    color: #1F2937;
}

.mid2 > h4 {
    font-size: 20px;
}

.action > p {
    color: #d9dbdd;
}

.topcontent > img {
    width: 500px;
    height: 250px;
}

button {
    border-radius: 8px;
    padding: 8px 32px;
}

.webinfo > button {
    border-color: transparent;
}
/* allignment */

.nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-right: 50px;
}

ul {
    display: flex;
    gap: 16px;
}

.topcontent{
    display: flex;
    justify-content: left;
    align-items: center;
    padding-bottom: 50px;
    gap: 50px;
}

.webinfo{
    width: 350px;
}

.top {
    display: flex;
    flex-direction: column;
    padding-left: 150px;
    padding-bottom: 20px;
}

.card > img {
    width: 150px;
    height: auto;
    border-radius: 10%;
    border: 4px solid #3992f6;
}
.mid1 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-content: space-between;
}

.cards {
    display: flex;
    justify-content: space-around;
    gap: 100px;
}

.card {
    width: 150px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.mid2 {
    display: flex;
    flex-direction: column;
    padding: 80px 160px 40px 160px;
    justify-content: center;
}

.mid2 > h4 {
    align-self: flex-end;    
}

.mid3 {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 50px;
}

.action > button {
    border-color: white;
}
.action {
    flex: 1;
    border-radius: 8px;
    display: flex;
    padding: 30px;
    margin: 20px 80px;
    align-items: center;
    justify-content: space-around;
}

.footer {
    text-align: center;
    padding: 10px;
}

